button mobile fix

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -278,6 +278,11 @@ input[type="submit"] {
   -moz-appearance: none;
 }
 
+input[type="reset"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
 input[type="button"] {
   -webkit-appearance: none;
   -moz-appearance: none;
